removed app container height property to fix spacing issue between the openai component and the footer

--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -7,7 +7,7 @@
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  height: 100vh;
+  /* height: fit-content; */
   -webkit-box-align: center;
   -ms-flex-align: center;
 }
